@startuml

title __APP's Class Diagram__\n

  namespace com.groupro.groupro {
    class com.groupro.groupro.Assignment {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.Assignment_Dialog {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.BatteryChangeReceiver {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.BatteryService {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.BuildConfig {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.MyProjects {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.Project {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.User {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.activity_CreateProject {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.activity_dashboard {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.activity_login {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.activity_my_assignments {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.activity_profile {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.activity_project {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.activity_register {
    }
  }
  

  namespace com.groupro.groupro {
    class com.groupro.groupro.dialog_budget {
    }
  }
  

  com.groupro.groupro.Assignment .up.|> java.io.Serializable
  com.groupro.groupro.Assignment_Dialog -up-|> androidx.appcompat.app.AppCompatDialogFragment
  com.groupro.groupro.Assignment_Dialog o-- com.groupro.groupro.Assignment_Dialog.AssignmentDialogListener : listener
  com.groupro.groupro.BatteryChangeReceiver -up-|> android.content.BroadcastReceiver
  com.groupro.groupro.BatteryService -up-|> android.app.Service
  com.groupro.groupro.BatteryService o-- com.groupro.groupro.BatteryChangeReceiver : receiver
  com.groupro.groupro.MyProjects -up-|> androidx.appcompat.app.AppCompatActivity
  com.groupro.groupro.Project .up.|> java.io.Serializable
  com.groupro.groupro.activity_CreateProject -up-|> androidx.appcompat.app.AppCompatActivity
  com.groupro.groupro.activity_dashboard -up-|> androidx.appcompat.app.AppCompatActivity
  com.groupro.groupro.activity_login .up.|> android.view.View.OnClickListener
  com.groupro.groupro.activity_login -up-|> androidx.appcompat.app.AppCompatActivity
  com.groupro.groupro.activity_my_assignments -up-|> androidx.appcompat.app.AppCompatActivity
  com.groupro.groupro.activity_profile -up-|> androidx.appcompat.app.AppCompatActivity
  com.groupro.groupro.activity_project .up.|> com.groupro.groupro.Assignment_Dialog.AssignmentDialogListener
  com.groupro.groupro.activity_project -up-|> androidx.appcompat.app.AppCompatActivity
  com.groupro.groupro.activity_project o-- com.groupro.groupro.Assignment : assignment
  com.groupro.groupro.activity_register .up.|> android.view.View.OnClickListener
  com.groupro.groupro.activity_register -up-|> androidx.appcompat.app.AppCompatActivity
  com.groupro.groupro.dialog_budget -up-|> androidx.fragment.app.Fragment
  com.groupro.groupro.dialog_budget o-- com.groupro.groupro.dialog_budget.OnFragmentInteractionListener : mListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
